{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 11,
  "lineage": "7390332a-e059-7721-bcd2-3973b93d81c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:112113402575:internet-gateway/igw-0a31b6bd0801efc73",
            "id": "igw-0a31b6bd0801efc73",
            "owner_id": "112113402575",
            "tags": {
              "Name": "ig_custom"
            },
            "tags_all": {
              "Name": "ig_custom"
            },
            "vpc_id": "vpc-0fd5c9ea4a6525c0d"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_custom_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:112113402575:route-table/rtb-0e23be4fabc61a28f",
            "id": "rtb-0e23be4fabc61a28f",
            "owner_id": "112113402575",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a31b6bd0801efc73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_custom_internet"
            },
            "tags_all": {
              "Name": "rt_custom_internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd5c9ea4a6525c0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_custom",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:112113402575:security-group/sg-0c7e3885e27b27df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7e3885e27b27df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250218103222896700000001",
            "name_prefix": "terraform-",
            "owner_id": "112113402575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "sg_custom",
              "Name": "sg_custom"
            },
            "tags_all": {
              "Description": "sg_custom",
              "Name": "sg_custom"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd5c9ea4a6525c0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:112113402575:vpc/vpc-0fd5c9ea4a6525c0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b92a315ee67af3a",
            "default_route_table_id": "rtb-0a5455b2c5ba03b8f",
            "default_security_group_id": "sg-098da46b7819e8c49",
            "dhcp_options_id": "dopt-0d28d986b45d78c40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd5c9ea4a6525c0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5455b2c5ba03b8f",
            "owner_id": "112113402575",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}